Adds automated tests for signup

--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -17,7 +17,7 @@
 
   <p>
     If you would like to host your own server,<br />
-    visit <a class="github-link" href="http://github.com/remotestorage/armadietto" target="_blank">armadietto on GitHub</a>.
+    visit <a class="github-link" href="https://github.com/remotestorage/armadietto" target="_blank">armadietto on GitHub</a>.
   </p>
 
 </section>
