--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -1,5 +1,11 @@
 <h2>You&rsquo;ve signed up</h2>
 
-<p class="success">Thanks, <em><%= params.username %></em>. &#9786;</p>
-
-<p><a href="https://remotestorage.io/apps/">Explore RemoteStorage webapps</a> </p>
+<p class="success">
+  Welcome! &#9786;
+</p>
+<p class="success">
+  Your account's user address is: <em><%= params.username %>@<%= host %></em>
+</p>
+<p class="text-center">
+  <a href="https://remotestorage.io/apps/">Explore remoteStorage apps</a>
+</p>
