--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -453,7 +453,7 @@ main .message {
 form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
   width: 22rem;
   max-width: calc(100vw - 2rem);
