--- a/lib/views/account.html
+++ b/lib/views/account.html
@@ -1,29 +1,32 @@
-<h2>Account Info</h2>
+<section>
+	<header class="centered">
+		<h2>Account Info</h2>
+		<p>Your storage account: <%= params.username %>@<%= host %></p>
+	</header>
 
-<p>Your storage account: <%= params.username %>@<%= host %></p>
-
-<table class="account-info">
-	<thead>
-		<tr>
-			<th>Application</th>
-			<th>Permissions</th>
-		</tr>
-	</thead>
-	<tbody>
-	<% sessions.forEach(function(session) { %>
-		<tr>
-			<td>
-				<img src="<%= session.clientId %>/favicon.ico" alt="Favicon for <%= session.clientId %>" class="favicon">
-				<a href="<%= session.clientId %>" target="_blank"><%= session.clientId %></a>
-			</td>
-			<td>
-				<% session.permissions.forEach(folder => { %>
-				<%= folder.folder %> <span class="deemphasize">
-					(<%= folder.permissions.join(', ') %>)
-				</span>
-				<% }); %>
-			</td>
-		</tr>
-	<% }); %>
-	</tbody>
-</table>
+	<table class="account-info">
+		<thead>
+			<tr>
+				<th>Application</th>
+				<th>Permissions</th>
+			</tr>
+		</thead>
+		<tbody>
+		<% sessions.forEach(function(session) { %>
+			<tr>
+				<td>
+					<img src="<%= session.clientId %>/favicon.ico" alt="Favicon for <%= session.clientId %>" class="favicon">
+					<a href="<%= session.clientId %>" target="_blank"><%= session.clientId %></a>
+				</td>
+				<td>
+					<% session.permissions.forEach(folder => { %>
+					<%= folder.folder %> <span class="deemphasize">
+						(<%= folder.permissions.join(', ') %>)
+					</span>
+					<% }); %>
+				</td>
+			</tr>
+		<% }); %>
+		</tbody>
+	</table>
+</section>
