--- a/lib/views/layout.html
+++ b/lib/views/layout.html
@@ -33,15 +33,15 @@
       <nav role="navigation">
         <ul>
           <li>
-            <a href="<%= basePath %>/">Home</a>
+            <a class="navitem" href="<%= basePath %>/">Home</a>
           </li>
 		  <li>
-            <a href="<%= basePath %>/account">Account</a>
+            <a class="navitem" href="<%= basePath %>/account">Account</a>
           </li>
           <% if (signup) { %>
-          <li class="login">
-            <a class="signup" href="<%= basePath %>/signup">Sign up</a>
-          </li>
+            <li class="login">
+              <a class="navitem signup" href="<%= basePath %>/signup">Sign up</a>
+            </li>
           <% } %>
           <li>
             <button id="switch">Switch</button>
