--- a/lib/views/login.html
+++ b/lib/views/login.html
@@ -15,5 +15,5 @@
       <td><input type="password" id="password" name="password" value=""></td>
     </tr>
   </table>
-  <p><input type="submit" value="Go"></p>
+  <button type="submit" name="signup" value="Go">Login</button>
 </form>
