--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -258,7 +258,7 @@ header.topbar nav ul {
   padding: 0;
 }
 
-header.topbar .signup {
+header.topbar .navitem {
 	display: inline-flex;
   align-items: center;
   gap: .125rem;
@@ -268,6 +268,7 @@ header.topbar .signup {
 	color: var(--arma-text-color);
 	transition: all .2s linear;
   text-decoration: none;
+  height: 3rem;
 }
 
 header.topbar .signup::before {
@@ -277,6 +278,7 @@ header.topbar .signup::before {
 }
 
 header.topbar .signup:hover,
+header.topbar .navitem:hover,
 header.topbar .signup:focus {
   color: var(--arma-text-color);
   box-shadow: inset 0 0 0 .125rem var(--arma-text-color);
