--- a/lib/views/account.html
+++ b/lib/views/account.html
@@ -9,6 +9,7 @@
 			<tr>
 				<th>Application</th>
 				<th>Permissions</th>
+				<th>Controls</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -24,6 +25,9 @@
 						(<%= folder.permissions.join(', ') %>)
 					</span>
 					<% }); %>
+				</td>
+				<td>
+					<button>Revoke</button>
 				</td>
 			</tr>
 		<% }); %>
