In approved app listing, removes favicons, replaces clientId with appName

--- a/lib/views/account.html
+++ b/lib/views/account.html
@@ -15,8 +15,7 @@
 		<% sessions.forEach(function(session) { %>
 			<tr>
 				<td>
-					<img src="<%= session.clientId %>/favicon.ico" alt="Favicon for <%= session.clientId %>" class="favicon">
-					<a href="<%= session.clientId %>" target="_blank"><%= session.clientId %></a>
+					<a href="<%= session.clientId %>" target="_blank"><%= session.appName %></a>
 				</td>
 				<td>
 					<% session.permissions.forEach(folder => { %>
