--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -258,7 +258,7 @@ header.topbar nav ul {
   padding: 0;
 }
 
-header.topbar .signup {
+header.topbar .navitem {
 	display: inline-flex;
   align-items: center;
   gap: .125rem;
@@ -268,6 +268,7 @@ header.topbar .signup {
 	color: var(--arma-text-color);
 	transition: all .2s linear;
   text-decoration: none;
+  height: 3rem;
 }
 
 header.topbar .signup::before {
@@ -277,6 +278,7 @@ header.topbar .signup::before {
 }
 
 header.topbar .signup:hover,
+header.topbar .navitem:hover,
 header.topbar .signup:focus {
   color: var(--arma-text-color);
   box-shadow: inset 0 0 0 .125rem var(--arma-text-color);
@@ -784,4 +786,17 @@ button[name="deny"]:focus {
 
 #switch.light::before {
   content: url('sprite.svg#icon-moon');
+}
+.deemphasize {
+	color: #a6a6a6;
+	font-size: 0.8em;
+}
+.favicon {
+	width: 32px;
+	height: 32px;
+	vertical-align: middle;
+}
+
+.account-info td {
+	font-size: 0.8em;
 }
