Splits layout.html into header and footer, so only one call to render is made

--- a/lib/views/account.html
+++ b/lib/views/account.html
@@ -1,3 +1,5 @@
+<%- include('header.html'); %>
+
 <section>
 	<header class="centered">
 		<h2>Account Info</h2>
@@ -29,3 +31,5 @@
 		</tbody>
 	</table>
 </section>
+
+<%- include('footer.html'); %>
