--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -1,3 +1,5 @@
+<%- include('header.html'); %>
+
 <section class="hero">
 
   <header class="centered">
@@ -21,3 +23,5 @@
   </p>
 
 </section>
+
+<%- include('footer.html'); %>
