--- a/lib/views/login.html
+++ b/lib/views/login.html
@@ -1,3 +1,5 @@
+<%- include('header.html'); %>
+
 <section>
   <header>
     <h2>Log In</h2>
@@ -21,3 +23,5 @@
     <button type="submit" name="login" value="Go">Login</button>
   </form>
 </section>
+
+<%- include('footer.html'); %>
