--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -1,3 +1,5 @@
+<%- include('header.html'); %>
+
 <h2>You&rsquo;ve signed up</h2>
 
 <p class="success">
@@ -9,3 +11,5 @@
 <p class="text-center">
   <a href="https://remotestorage.io/apps/">Explore remoteStorage apps</a>
 </p>
+
+<%- include('footer.html'); %>
