--- a/lib/views/auth.html
+++ b/lib/views/auth.html
@@ -1,3 +1,5 @@
+<%- include('header.html'); %>
+
 <h2>Authorize</h2>
 
 <div class="oauth-form">
@@ -37,3 +39,5 @@
     </div>
   </form>
 </div>
+
+<%- include('footer.html'); %>
