--- a/lib/views/account.html
+++ b/lib/views/account.html
@@ -1,9 +1,9 @@
 <%- include('header.html'); %>
 
 <section>
-	<header class="centered">
+	<header class="centeredText">
 		<h2>Account Info</h2>
-		<p>Your storage account: <%= params.username %>@<%= host %></p>
+		<p>Your storage account: <%= params.displayName %>@<%= host %></p>
 	</header>
 
 	<table class="account-info">
