--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -2,7 +2,7 @@
 
 <section class="hero">
 
-  <header class="centered">
+  <header class="centeredText">
     <div class="artwork">
       <svg role="img" height="200" version="1.1" viewBox="0 0 739 853" xmlns="http://www.w3.org/2000/svg">
         <title>armadietto logo</title>
