--- a/lib/views/admin/users.html
+++ b/lib/views/admin/users.html
@@ -30,6 +30,10 @@
     </tbody>
 </table>
 
+&nbsp;
+<hr>
+&nbsp;
+
 <%- include('../contact-url.html'); %>
 
 <div id="progress" hidden><label>Generating: <progress></progress></label></div>
