--- a/lib/views/admin/invite-requests.html
+++ b/lib/views/admin/invite-requests.html
@@ -7,6 +7,7 @@
     <header class="centeredText"><h1><%= title %></h1></header>
 </section>
 
+<% if (items.length) { %>
 <table id="inviteRequests" class="fullwidth">
     <tbody>
     <% for (item of items) { %>
@@ -19,6 +20,15 @@
     <% } %>
     </tbody>
 </table>
+<% } else { %>
+<div class="flexRowSpaceAround">
+    <div>No invite requests</div>
+</div>
+<% } %>
+
+&nbsp;
+<hr>
+&nbsp;
 
 <%- include('../contact-url.html'); %>
 
