--- a/lib/views/admin/invite-valid.html
+++ b/lib/views/admin/invite-valid.html
@@ -5,6 +5,7 @@
 <section class="centeredText">
     <h1><%= title %></h1>
     <p>Contact URL: <%= contactURL %> </p>
+    <p>Privileges: <%= Object.keys(accountPrivileges).join(', ') || '«none»' %></p>
     <p>You will always use a passkey to log into your account.</p>
     <p id="message"><%= message %></p>
 </section>
