OAuth stores parameters in session, rather than passing to client & back

--- a/lib/views/admin/invite-requests.html
+++ b/lib/views/admin/invite-requests.html
@@ -32,6 +32,10 @@
 
 <%- include('../contact-url.html'); %>
 
+&nbsp;
+<hr>
+&nbsp;
+
 <div id="progress" hidden><label>Generating: <progress></progress></label></div>
 
 <div id="sendFromMeContainer" class="marginTop marginSides centeredText" hidden>
