--- a/lib/views/admin/users.html
+++ b/lib/views/admin/users.html
@@ -36,6 +36,10 @@
 
 <%- include('../contact-url.html'); %>
 
+&nbsp;
+<hr>
+&nbsp;
+
 <div id="progress" hidden><label>Generating: <progress></progress></label></div>
 
 <div id="sendFromMeContainer" class="marginTop marginSides centeredText" hidden>
