--- a/lib/views/contact-url.html
+++ b/lib/views/contact-url.html
@@ -8,10 +8,10 @@
         <label for="protocol" class="overLabel">Protocol</label> &nbsp;
         <select name="protocol" id="protocol" value="<%= params.protocol || '' %>" required>
             <option value="sgnl:">Signal Private Messenger</option>
+            <option value="threema:">Threema</option>
             <option value="facetime:">FaceTime</option>
             <option value="xmpp:">Jabber</option>
             <option value="skype:">Skype</option>
-            <option value="msnim:">Windows Live Messenger</option>
             <option value="mailto:">E-mail</option>
             <option value="sms:">SMS</option>
             <option value="whatsapp:">WhatsApp</option>
