--- a/lib/views/login/request-invite.html
+++ b/lib/views/login/request-invite.html
@@ -4,6 +4,8 @@
 
 <h2>Request an Invitation</h2>
 
+<p>How should we contact you?</p>
+
 <%- include('../contact-url.html'); %>
 
 <%- include('../end.html'); %>
