--- a/lib/views/admin/invite-requests.html
+++ b/lib/views/admin/invite-requests.html
@@ -22,7 +22,7 @@
 </table>
 <% } else { %>
 <div class="flexRowSpaceAround">
-    <div>No invite requests</div>
+    <div>No invite requests currently</div>
 </div>
 <% } %>
 
@@ -43,7 +43,7 @@
 </div>
 
 <div id="shareContainer" class="marginTop marginSides centeredText" hidden>
-    <button id="share" type="button" class="width10em">Share Invite from an account of mine</button>
+    <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
 </div>
 
 <div id="outputDiv" class="marginTop marginSides" hidden>
