--- a/lib/views/admin/invite-valid.html
+++ b/lib/views/admin/invite-valid.html
@@ -15,7 +15,7 @@
         <input type="text" id="username" value="<%= username %>" placeholder="Your choice" autofocus>
     </div>
     <input type="hidden" id="options" value="<%= options %>">
-    <div class="centeredBoxContent marginTop"><button id="register" hidden>Create Passkey</button></div>
+    <div class="centeredBoxContent marginTop"><button id="register" class="mainAction" hidden>Create Passkey</button></div>
     <div id="progress" hidden><label>Creating &amp; registering: <progress></progress></label></div>
 </main>
 <%- include('../end.html'); %>
