--- a/lib/views/admin/users.html
+++ b/lib/views/admin/users.html
@@ -47,7 +47,7 @@
 </div>
 
 <div id="shareContainer" class="marginTop marginSides centeredText" hidden>
-    <button id="share" type="button" class="width10em">Share Invite from an account of mine</button>
+    <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
 </div>
 
 <div id="outputDiv" class="marginTop marginSides" hidden>
