--- a/lib/views/login/login.html
+++ b/lib/views/login/login.html
@@ -17,7 +17,7 @@
     </header>
     <p id="message"><%= message %></p>
     <input type="hidden" id="options" value="<%= options %>">
-    <div><button id="login">Log in</button></div>
+    <div><button id="login" class="mainAction">Log in</button></div>
     <div id="progress" hidden><label>Logging-in: <progress></progress></label></div>
 </section>
 
