Consistently handles session after credential verified

--- a/lib/views/auth-passkey.html
+++ b/lib/views/auth-passkey.html
@@ -46,6 +46,8 @@
       <button type="submit" name="deny" value="Deny">Deny</button>
     </div>
   </form>
+
+  <input type="hidden" name="redirect_uri" value="<%= redirect_uri %>">
 </div>
 
 <%- include('end.html'); %>
