--- a/lib/views/login/login.html
+++ b/lib/views/login/login.html
@@ -5,7 +5,7 @@
 <section class="hero">
 
     <header class="centeredText">
-        <% if (title === 'Start User Session') { %>
+        <% if (title === 'Login') { %>
         <div class="artwork">
             <svg role="img" height="200" version="1.1" viewBox="0 0 739 853" xmlns="http://www.w3.org/2000/svg">
                 <title>armadietto logo</title>
