Corrects caching headers and improves error messages when session expires

--- a/lib/views/auth-passkey.html
+++ b/lib/views/auth-passkey.html
@@ -2,7 +2,7 @@
 
 <script type="module" src="<%= basePath %>/assets/oauth.mjs"></script>
 
-<header class="centeredText"><h1>Authorize</h1></header>
+<header class="centeredText"><h1><%= title %></h1></header>
 
 <div class="oauth-form">
   <p>The application <em><%= client_id %></em> hosted at
