Refactors contactURLToLink, assembleContactURL & protocol options into new protocols module w/ planned configurability

--- a/lib/views/contact-url.html
+++ b/lib/views/contact-url.html
@@ -7,15 +7,9 @@
     <div class="form-group">
         <label for="protocol" class="overLabel">Protocol</label> &nbsp;
         <select name="protocol" id="protocol" value="<%= params.protocol || '' %>" required>
-            <option value="sgnl:">Signal Private Messenger</option>
-            <option value="threema:">Threema</option>
-            <option value="facetime:">FaceTime</option>
-            <option value="xmpp:">Jabber</option>
-            <option value="skype:">Skype</option>
-            <option value="mailto:">E-mail</option>
-            <option value="sms:">SMS</option>
-            <option value="whatsapp:">WhatsApp</option>
-            <option value="tg:">Telegram</option>
+            <% for (option of protocolOptions) { %>
+            <option value="<%= option.protocol %>"><%= option.name %></option>
+            <% } %>
         </select>
     </div>
 
