--- a/lib/views/login/request-invite-success.html
+++ b/lib/views/login/request-invite-success.html
@@ -1,7 +1,11 @@
 <%- include('../begin.html'); %>
 
+<header class="centeredText">
 <h2>Invitation Requested</h2>
+</header>
 
-<p><%= params.contactURL %></p>
+<p>Check that clicking this link starts a message to you:</p>
+
+<p class="centeredText"><a href="<%= params.contactURL %>"><%= params.contactURL %></a></p>
 
 <%- include('../end.html'); %>
