Adds passkey logo everywhere passkeys are mentioned

--- a/lib/views/account/account.html
+++ b/lib/views/account/account.html
@@ -11,7 +11,11 @@
     </tbody>
 </table>
 
-    <header class="centeredText"><h2>Passkeys</h2></header>
+<header class="flexRowCenter">
+    <h2>Passkeys &nbsp;</h2>
+    <img src="/assets/passkeymajor-svgrepo-com.svg" class="passkeyIcon" alt="">
+</header>
+
         <table id="credentials" class="fullwidth centeredText">
             <thead>
                 <tr><th>Created using</th><th>Created on</th><th>Last used</th></tr>
