--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -269,6 +269,7 @@ header.topbar h1 a:focus {
 
 header.topbar nav ul {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   column-gap: .5rem;
@@ -447,6 +448,7 @@ only screen and (max-width: 525px)  {
   #users td:nth-of-type(1):before { content: "Name"; }
   #users td:nth-of-type(2):before { content: "Contact URL"; }
   #users td:nth-of-type(3):before { content: "Last connected"; }
+  #users td:nth-of-type(4):before { content: "Privileges"; }
 }
 
 .borderSolid {
@@ -655,7 +657,6 @@ button[type="submit"], button.mainAction {
   color: var(--arma-btn-txt-color);
   font-family: 'Outfit', var(--font-fallback);
   font-size: 1.3rem;
-  margin-left: auto;
   font-weight: 700;
   line-height: 1.4;
   transition: all .3s ease;
@@ -868,6 +869,31 @@ button[name="deny"]:focus {
   align-items: center;
 }
 
+.flexRowCenter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexRowWrapResponsive {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media
+only screen and (max-width: 525px)  {
+  .flexRowWrapResponsive {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+
 /* ICONS */
 
 [class^="icon-"] {
@@ -885,6 +911,15 @@ button[name="deny"]:focus {
   margin: auto;
 }
 
+.passkeyIcon {
+  height: 1.5em;
+  margin: 0.5em;
+}
+
+.passkeyIconLg {
+  height: 6.5em;
+  margin: 0.5em;
+}
 
 /* SWITCH */
 #switch {
