--- a/lib/views/account/account.html
+++ b/lib/views/account/account.html
@@ -1,5 +1,7 @@
 <%- include('../begin.html'); %>
 
+<script type="module" src="<%= basePath %>/assets/admin-users.mjs"></script>
+
 <section class="hero">
     <header><h1><%= title %></h1><h1><%= username %></h1></header>
 </section>
@@ -30,5 +32,28 @@
             <% } %>
             </tbody>
         </table>
+
+<hr>
+
+<div class="marginTop marginSides centeredText">To create a passkey on a new device, invite yourself to create another passkey:</div>
+<div class="marginTop marginSides flexRowCenter">
+    <button id="reinviteSelf" class="mainAction" data-username="<%= username %>" data-contacturl="<%= contactURL %>" data-privilegegrant="{&quot;STORE&quot;:true}" >Invite yourself to create another passkey</button>
+</div>
+
+<div id="progress" hidden><label>Generating: <progress></progress></label></div>
+
+<div id="sendFromMeContainer" class="marginTop marginSides centeredText" hidden>
+    <a id="sendFromMe" href="" target="_blank" rel="noreferrer">Send invite from my account</a>
+</div>
+
+<div id="shareContainer" class="marginTop marginSides centeredText" hidden>
+    <button id="share" type="button" class="mainAction width10em">Share Invite from an account of mine</button>
+</div>
+
+<div id="outputDiv" class="marginTop marginSides" hidden>
+    <label id="outputLabel" for="output"></label>
+    <div id="output" class="borderSolid padding"></div>
+</div>
+
 
 <%- include('../end.html'); %>
