invites stored in directory "invites"; improves UI messages

--- a/lib/views/account/account.html
+++ b/lib/views/account/account.html
@@ -3,7 +3,7 @@
 <script type="module" src="<%= basePath %>/assets/admin-users.mjs"></script>
 
 <section class="hero">
-    <header><h1><%= title %></h1><h1><%= username %></h1></header>
+    <header><h1><%= title %></h1><h1><%= username + '@' + host %></h1></header>
 </section>
 
 <table class="fullwidth centeredText">
